--- a/src/wireframe.html
+++ b/src/wireframe.html
@@ -674,5 +674,5 @@ blockquote {
 }
 	
 </style></head><body><article id="133d0a5a-a30d-4f3a-a66a-910a492bb600" class="page sans"><header><h1 class="page-title">Wireframe</h1><p class="page-description"></p></header><div class="page-body"><p id="03454338-b5a8-4585-8e33-b1e798782cfa" class="">
-</p><p id="0f1b29e3-eae9-4293-af8b-d48a568c6e6b" class="">I’m doing wireframes for the first time. I learned &amp; tried one using Figma <a href="https://www.figma.com/file/u4a9VDDbKZ2OI6Dfpz5osw/Aurora?type=design&amp;node-id=0%3A1&amp;mode=design&amp;t=gmsYEc9NlfoV3OUE-1">here</a>. </p><p id="f1da3803-0658-497f-a04d-0ab59fa01c31" class="">I didn’t focus on the UI much but rather just the flow. </p><p id="319c2468-6020-491e-9c19-8c70d70e621f" class="">
+</p><p id="0f1b29e3-eae9-4293-af8b-d48a568c6e6b" class="">This is my first attempt creating wireframes. All along I was given the design and I reproduce it via code. I learned &amp; tried one using Figma <a href="https://www.figma.com/file/u4a9VDDbKZ2OI6Dfpz5osw/Aurora?type=design&amp;node-id=0%3A1&amp;mode=design&amp;t=gmsYEc9NlfoV3OUE-1">here</a>. </p><p id="f1da3803-0658-497f-a04d-0ab59fa01c31" class="">I chose to not focus on the UI much but rather just the flow. </p><p id="319c2468-6020-491e-9c19-8c70d70e621f" class="">
 </p></div></article></body></html>
